[package]
name = "rs-cheat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
schemars = "0.8"
serde_json = "1.0.75"
lazy_static = "1.4.0"